--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -42,6 +42,7 @@
   \subfigure[SSD van de use case select hospital.]{
 	  \includegraphics[width=0.4\textwidth]{SSDSelectHospital.pdf}
 	  }
+\caption{System Sequence Diagrams.}
 \end{figure}
 
 \begin{figure}[h!]
@@ -55,35 +56,35 @@
   \centering
   \subfigure[SD van de use case dispatch units.]{
   \includegraphics[width=1.0\textwidth, angle=-90]{SDDispatchUnits.pdf}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case end of task.]{
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDEndOfTask.pdf}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case handle emergency.]{
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDHandleEmergency.pdf}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case inspect emergencies.]{
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDInspectEmergencies.pdf}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case remove unit.]{
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDRemoveUnit.pdf}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case select hospital.]{
+  \includegraphics[width=0.9\textheight, angle=-90]{SDSelectHospital.pdf}}
   \caption{Sequence Diagrams.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textwidth, angle=-90]{SDEndOfTask.pdf}
-  \caption{SD van de use case end of task.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textwidth, angle=-90]{SDHandleEmergency.pdf}
-  \caption{SD van de use case handle emergency.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textwidth, angle=-90]{SDInspectEmergencies.pdf}
-  \caption{SD van de use case inspect emergencies.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textwidth, angle=-90]{SDRemoveUnit.pdf}
-  \caption{SD van de use case remove unit.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textheight, angle=-90]{SDSelectHospital.pdf}
-  \caption{SD van de use case select hospital.}
 \end{figure}
