subsectie rond FindBugs geschreven
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@540 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,titlepage]{article}
 \usepackage[english]{babel}
 \usepackage{fullpage}
 \usepackage{emp}
@@ -12,6 +12,7 @@
 \usepackage{float}
 \usepackage{subfigure}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+\newcommand{\name}[1]{\textit{#1}}
 
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
@@ -47,7 +48,7 @@ Pieter-Jan \textsc{Vuylsteke}
 %\maketitle
 \end{center}
 \end{titlepage}
-\newpage
+\tableofcontents
 \input{domainModel}
 \input{terminology}
 \input{refactorings}
