afgewerkt domeinmodel en terminologielijst.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@553 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
@@ -49,6 +49,7 @@ Pieter-Jan \textsc{Vuylsteke}
 \end{center}
 \end{titlepage}
 \tableofcontents
+\newpage
 \input{domainModel}
 \input{terminology}
 \input{refactorings}
