Verslag gecontroleerd en al enkele (kleine) foutjes uitgehaald
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@563 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
@@ -1,6 +1,6 @@
 \section{Refactorings}
 \subsection{FindBugs}
-Before we actually started focused refactoring, we fist used a small tool named \name{FindBugs}. This is a tool developed by the \name{University of Maryland}. This program resulted in finding 16 ``bugs''\footnote{They use the word bug very widly. For instance naming conventions and performance issues were marked as bugs}. The bugs were classified in the following categories:
+Before we actually started refactoring, we first used a small tool named \name{FindBugs}. This is a tool developed by the \name{University of Maryland}. This program resulted in finding 16 ``bugs''\footnote{They use the word bug very widely. For instance naming conventions and performance issues were marked as bugs}. The bugs were classified in the following categories:
 \begin{itemize}
  \item Correctness (1)
  \item Bad Practices (8)
@@ -9,5 +9,5 @@ Before we actually started focused refactoring, we fist used a small tool named 
  \item Dodgy (1)
 \end{itemize}
 Only 6 of them were real issues and have been fixed.
-\subsection{Focused Refactoring}
+\subsection{Refactoring}
 Taking a break in coding gives the opportunity to look again at your code through new eyes. By reviewing our code we found some minor issues that could have been done better.
