--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/domainModel.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/domainModel.tex
@@ -5,4 +5,4 @@
 \caption{The new domain model.}
 \label{fig:newDomainModel}
 \end{figure}
-Figure \ref{fig:newDomainModel} shows the new domain model of the project. Some important changes have been made to the original domain model we will describe here. We introduced the Policies intro the domain model. Although Policies are no physical objects in the world they are a prominent part of the project and play an important role. Secondly we introduced a Disaster.
+Figure \ref{fig:newDomainModel} shows the new domain model of the project. Some important changes have been made to the original domain model we will describe here. We introduced the policies into the domain model. Although policies are no physical objects in the world they are a prominent part of the project and play an important role. Secondly we introduced a disaster.
