--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
@@ -10,4 +10,13 @@ Before we actually started refactoring, we first used a small tool named \name{F
 \end{itemize}
 Only 6 of them were real issues and have been fixed.
 \subsection{Refactoring}
-Taking a break in coding gives the opportunity to look again at your code through new eyes. By reviewing our code we found some minor issues that could have been done better.
+Taking a break in coding gives the opportunity to look again at your code through new eyes. By reviewing our code we found some minor issues that could have been done better. We've done seven refactorings.
+\begin{itemize}
+	\item In the class \texttt{DispatchPolicy} we've done an extract method refactoring. The method \textit{doesNotDetectLoop} is extracted from \textit{isValidSuccessor}.
+	\item We did the same refactoring in the class \texttt{MainUserInterface}. The method \textit{writeProjectHeader} is extracted from the method \textit{handleUserInterface}.
+	\item We used an ``Introduce explaining variable'' in the class \texttt{ASAPDispatchPolicy} on the method \textit{internalCompare}. The purpose of this refactoring was better code readability.
+	\item In the class \texttt{UnitsNeeded} we've applied the ``Replace Temp with Query'' refactoring because it makes the code more readable.
+	\item We've found the refactoring ``Consolidate conditional expression'' in the class \texttt{DispatchPolicy}. We've made a method \textit{cantSolveAndHasSuccessor}.
+	\item If we want to change/delete the description of an emergency, we must change it in every subclass. So this were the bad smells ``Shotgun Surgery'' and ``Duplicated Code''. This has been solved by the ``Pull up'' refactoring.
+	\item In the class \texttt{GPSCoordinate} we've removed the temporary variable in the method \textit{getDistanceTo}.
+\end{itemize}
