World & main staan nu in dezelfde package. Verslag is aangepast: fire truck is nu juist geschreven + datum is correct.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@576 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
@@ -13,10 +13,11 @@
 \usepackage{subfigure}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \newcommand{\name}[1]{\textit{#1}}
+\newcommand{\thedate}{23 march 2011}
 
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
-\date{24 december 2010}
+\date{\thedate}
 
 \begin{document}
 \begin{titlepage}
@@ -44,7 +45,7 @@ Pieter-Jan \textsc{Vuylsteke}
 \vfill
 
 % Bottom of the page
-{\large \today}
+{\large \thedate }
 %\maketitle
 \end{center}
 \end{titlepage}
