Een nieuwe bestand aangemaaktk voor de sectie omtrent test testings.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@581 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
@@ -53,5 +53,6 @@ Pieter-Jan \textsc{Vuylsteke}
 \newpage
 \input{domainModel}
 \input{terminology}
+\input{testing}
 \input{refactorings}
 \end{document}
