Aangezien dat ik nog locally modifieds had staan zal ik deze maar eens comitten. Kweet dus nie wat er anders is.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@585 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/testing.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/testing.tex
@@ -1,1 +1,2 @@
 \section{Testing approach}
+Before we did our refactorings, we made a lot of tests. In the previous iterations we had class tests and global tests. In this iteration we added a new type of test, namely a scenario test. A class test is a test that is made to test the methods of a specific class. A scenario test is used to test the whole domain and its controllers. In the previous iterations we tried something like a scenario test but it uses the domain directly. We also did deeper testing because some lines were not fully covered. The reason was that some borderline cases were not covered. We used our test suite \footnote{We use the word test suite not in the context of JUnit. If we use a JUnit test suite we can't test exceptions.} to test before the refactorings and after the refactorings. This way it was easy to find if we broke something in a refactoring.
