deel I van refactoring EmergencyStatus
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@592 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
@@ -19,4 +19,5 @@ Taking a break in coding gives the opportunity to look again at your code throug
 	\item We've found the refactoring ``Consolidate conditional expression'' in the class \texttt{DispatchPolicy}. We've made a method \textit{cantSolveAndHasSuccessor}. The purpose was to improve the readability.
 	\item If we want to change/delete the description of an emergency, we must change it in every subclass. So this were the bad smells ``Shotgun Surgery'' and ``Duplicated Code''. This has been solved by the ``Pull up'' refactoring. This was done to improve the changeability.
 	\item In the class \texttt{GPSCoordinate} we've removed the temporary variable in the method \textit{getDistanceTo}. We did this to improve the readability.
+	\item In the class \texttt{Unit} we've extracted the part of calculating the new \textttt{GPSCoordinate} to \texttt{GPSCoordinate}.
 \end{itemize}
