Verslag verder aangepast.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@594 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/Domain_Model_and_Refactoring_Report.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,titlepage]{article}
 \usepackage[english]{babel}
-\usepackage{fullpage}
+%\usepackage{fullpage}
 \usepackage{emp}
 \usepackage{tikz}
 \usepackage{graphicx}
