--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Domain_model_and_refactoring_report/refactorings.tex
@@ -10,14 +10,18 @@ Before we actually started refactoring, we first used a small tool named \name{F
 \end{itemize}
 Only 6 of them were real issues and have been fixed.
 \subsection{Refactoring}
-Taking a break in coding gives the opportunity to look again at your code through new eyes. By reviewing our code we found some minor issues that could have been done better. We've done seven refactorings.
+Taking a break in coding gives the opportunity to look again at your code through new eyes. By reviewing our code we found some minor issues that could have been done better. We've done a couple of refactorings.
 \begin{itemize}
 	\item In the class \texttt{DispatchPolicy} we've done an extract method refactoring. The method \textit{detectLoop} is extracted from \textit{isValidSuccessor}. We did this because there was a comment and that's a bad smell. The comment said ''loop detection'', so we made the method with the identical name.
 	\item We did the same refactoring in the class \texttt{MainUserInterface}. The method \textit{writeProjectHeader} is extracted from the method \textit{handleUserInterface}. The bad smell this time was ``Comments''.
-	\item We used an ``Introduce explaining variable'' in the class \texttt{ASAPDispatchPolicy} on the method \textit{internalCompare}. The purpose of this refactoring was better code readability. The previous code was too complicated to understand instantly, so we added two temporary explaining variables.
+	\item We used an ``Introduce Explaining Variable'' in the class \texttt{ASAP\-Dispatch\-Policy} on the method \textit{internalCompare}. The purpose of this refactoring was better code readability. The previous code was too complicated to understand instantly, so we added two temporary explaining variables.
 	\item In the class \texttt{UnitsNeeded} in the method generateProposal we've done a combination of the ``Replace Temp with Query'' and ``Extract Method'' refactoring, because it makes the code more readable. We've extracted the method calculateFixedPart. 
-	\item We've found the refactoring ``Consolidate conditional expression'' in the class \texttt{DispatchPolicy}. We've made a method \textit{cantSolveAndHasSuccessor}. The purpose was to improve the readability.
+	\item We've found the refactoring ``Consolidate Conditional expression'' in the class \texttt{DispatchPolicy}. We've made a method \textit{cantSolveAndHasSuccessor}. The purpose was to improve the readability.
 	\item If we want to change/delete the description of an emergency, we must change it in every subclass. So this were the bad smells ``Shotgun Surgery'' and ``Duplicated Code''. This has been solved by the ``Pull up'' refactoring. This was done to improve the changeability.
 	\item In the class \texttt{GPSCoordinate} we've removed the temporary variable in the method \textit{getDistanceTo}. We did this to improve the readability.
-	\item In the class \texttt{Unit} we've extracted the part of calculating the new \textttt{GPSCoordinate} to \texttt{GPSCoordinate}.
+	\item In the class \texttt{Unit} a method called \textit{changeLocation} did its own coordinate arithmetic calculation. We've extracted this part of the method to \texttt{GPSCoordinate}. This was the bad smell ``Feature Envy''. The objective was ``Information Expert''.
+	\item The external system suffered from ``Data Clumps'' and ``Large Class'' bad smells. So we extracted the class \texttt{TimeAheadAdapter}. In the previous iteration all responsibilities were in the controllers. So we extracted this in a distinct class. This was done for code readability.
+	\item We've used IDs to refer to the emergencies. This has been changed by a pointer. The domain doesn't use the IDs anymore although it's useful to use IDs in the user interface. So we made a class that maps the ID to the correct emergency. This class is called \texttt{EmergencyMapper}. This was the bad smell ``Primitive Obsession''.
+	\item In the class \texttt{EmergencyStatus} we have found the bad smell ``Duplicated Code''. We've used ``Extract Method'' en ``Pull Up Method'' to make the method handling more uniform among the several statuses. Statuses with different handling rules could simply override those methods.
 \end{itemize}
+After we've done the refactorings, we did another run of FindBugs. This resulted in no extra bugs.
