boolean attribuut toegevoegd die aanduidt of een emergency deel uitmaakt van een disaster
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@728 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
@@ -13,10 +13,6 @@
 \usepackage{subfigure}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
-\title{Software Ontwerp - Verslag Iteratie 3\\Prof. T. Holvoet\\Dhr. T. Heyman}
-\author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
-\date{20 mei 2010}
-
 \begin{document}
 \begin{empfile}
 \begin{titlepage}
@@ -44,8 +40,7 @@ Pieter-Jan \textsc{Vuylsteke}
 \vfill
 
 % Bottom of the page
-{\large \today}
-%\maketitle
+{\large 20 mei 2011}
 \end{center}
 \end{titlepage}
 \tableofcontents
