projectbeheer + inleiding aangepast
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@755 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/inleiding.tex
@@ -1,1 +1,12 @@
 Dit verslag beschrijft de derde iteratie van het dispatch systeem voor het vak \textit{Software-Ontwerp}.
+\paragraph{}
+%nadruk en nieuwigheden vermelden
+Het verslag is als volgt gestructureerd. In sectie \ref{overzicht} geven we een overzicht van het systeem en zijn subsystemen.
+We tonen ook hoe we de verschillende verantwoordelijkheden hebben toegewezen.
+In sectie \ref{patterns} bespreken we de invloed van \textit{GRASP} en \textit{Design Patterns} op ons ontwerp.
+Alternatieve ontwerpen die niet gekozen werden, zullen ook vermeld worden.
+De mogelijkheden die voorzien zijn voor uitbreidingen zullen besproken worden in sectie \ref{uitbreidbaarheid}.
+Vervolgens tonen we in sectie \ref{testen} hoe we onze testen hebben aangepakt.
+In sectie \ref{projectbeheer} vermelden we hoe we de verschillende taken hebben verdeeld onder de groepsleden
+en hoeveel tijd er werd besteed aan deze taken.
+Ten slotte besluiten we in sectie \ref{besluit} door o.a. enkele problemen te schetsen die we zijn tegengekomen.
