--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
@@ -11,6 +11,7 @@
 \usepackage{color}
 \usepackage{float}
 \usepackage{subfigure}
+\usepackage{todonotes}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 \begin{document}
@@ -40,10 +41,11 @@ Pieter-Jan \textsc{Vuylsteke}
 \vfill
 
 % Bottom of the page
-{\large 20 mei 2011}
+{\large 23 mei 2011}
 \end{center}
 \end{titlepage}
 \tableofcontents
+
 \newpage
 \section*{Inleiding}
 \input{inleiding}
