begonnen met domeinmodel en terminologie te integreren
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@851 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/report_iteration3.tex
@@ -50,6 +50,10 @@ Pieter-Jan \textsc{Vuylsteke}
 \section*{Inleiding}
 \input{inleiding}
 \newpage
+\section{Domeinmodel}
+\input{domeinmodel}
+\section{Terminologie}
+\input{terminologie}
 \section{Overzicht van het Systeem}
 \input{overzicht}
 %\newpage
