De SD's en SSD's  zitten nu in het verslag. Er moesten ook nog een aantal patterns in de uitleg staan. Ik heb ze van iteratie 2 gehaald en die erin gestoken (composite, ...).
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@852 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/bijlagen.tex
@@ -1,1 +1,131 @@
 \label{bijlagen}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SSD van de use case advance simulated time.]{
+		\includegraphics[width=0.4\textwidth]{SSD/AdvanceSimulatedTime.pdf}
+  }
+  \subfigure[SSD van de use case create disaster.]{
+		\includegraphics[width=0.4\textwidth]{SSD/CreateDisaster.pdf}
+	}
+	\subfigure[SSD van de use case create emergency.]{
+		\includegraphics[width=0.4\textwidth]{SSD/CreateEmergency.pdf}
+	}
+  \subfigure[SSD van de use case end of task.]{
+		\includegraphics[width=0.4\textwidth]{SSD/EndOfTask.pdf}
+	}
+	\subfigure[SSD van de use case inspect emergencies.]{
+		\includegraphics[width=0.4\textwidth]{SSD/InspectEmergencies.pdf}
+	}
+	\subfigure[SSD van de use case inspect disasters.]{
+		\includegraphics[width=0.4\textwidth]{SSD/InspectDisasters.pdf}
+	}
+	\subfigure[SSD van de use case handle emergency.]{
+		\includegraphics[width=0.4\textwidth]{SSD/HandleEmergency.pdf}
+	}
+	\subfigure[SSD van de use case select hospital.]{
+		\includegraphics[width=0.4\textwidth]{SSD/SelectHospital.pdf}
+  }
+\end{figure}
+	
+\begin{figure}
+	\centering
+	\subfigure[SSD van de use case dispatch units to emergency.]{
+		\includegraphics[width=0.4\textwidth]{SSD/DispatchUnitsToEmergency.pdf}
+	}
+	\subfigure[SSD van de use case dispatch units to disaster.]{
+		\includegraphics[width=0.4\textwidth]{SSD/DispatchUnitsToDisaster.pdf}
+	}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfigure[SSD van de use case remove unit voor emergency.]{
+		\includegraphics[width=0.4\textwidth]{SSD/RemoveUnitFromEmergency.pdf}
+  }
+  \subfigure[SSD van de use case remove unit voor disaster.]{
+		\includegraphics[width=0.4\textwidth]{SSD/RemoveUnitFromDisaster.pdf}
+  }
+	\caption{System Sequence Diagrams.}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case advance simulated time.]{
+		\includegraphics[width=1.0\textwidth]{SD/AdvanceSimulatedTime.pdf}
+	}
+  \subfigure[SD van de use case create emergency.]{
+		\includegraphics[width=1.0\textwidth]{SD/CreateEmergency.pdf}
+	}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case create disaster.]{
+		\includegraphics[width=1.0\textwidth]{SD/CreateDisaster.pdf}
+	}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case dispatch units to emergency.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/DispatchUnitsToEmergency.pdf}
+	}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case dispatch units to disaster.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/DispatchUnitsToDisaster.pdf}
+	}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case end of task.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/EndOfTask.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case handle emergency.]{
+  	\includegraphics[width=1.0\textwidth, angle=-90]{SD/HandleEmergency.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case inspect emergencies.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/InspectEmergencies.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case inspect disaster.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/InspectDisasters.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case remove unit voor emergency.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/RemoveUnitFromEmergency.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case remove unit voor disaster.]{
+		\includegraphics[width=1.0\textwidth, angle=-90]{SD/RemoveUnitFromDisaster.pdf}
+  }
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \subfigure[SD van de use case select hospital.]{
+		\includegraphics[width=0.9\textheight, angle=-90]{SD/SelectHospital.pdf}
+  }
+  \caption{Sequence Diagrams.}
+\end{figure}
