De sectie domeinmodel vertaald. Wel twijfelde ik of we policies en disasters in texttt moeten zetten of als normale tekst. (Nu staat het in texttt)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@853 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
@@ -2,7 +2,7 @@
 \begin{figure}[htb]
 \centering
 \includegraphics[width=\textwidth]{domainModel.pdf}
-\caption{The new domain model.}
+\caption{Het nieuwe domeinmodel.}
 \label{fig:newDomainModel}
 \end{figure}
-Figure \ref{fig:newDomainModel} shows the new domain model of the project. Some important changes have been made to the original domain model we will describe here. We introduced the policies into the domain model. Although policies are no physical objects in the world they are a prominent part of the project and play an important role. Secondly we introduced a disaster.
+Figuur \ref{fig:newDomainModel} toont het nieuwe domeinmodel voor dit project. Enkele belangrijke aanpassingen die gedaan werden op het originele domeinmodel worden hier beschreven. We introduceerden de \texttt{Policy}s in het domeinmodel. Alhoewel \texttt{Policy}s geen fysieke objecten zijn in de wereld, zijn ze een prominent deel van het project en spelen ze een belangrijke rol. Ten tweede introduceerden we het concept \texttt{Disaster}.
