introductiezinnetje van de sectie verteld, nu beginnen aan firetruck. (ik commit nogal veel om overlap te vermijden) Waar zit je al jonas?
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@855 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/terminologie.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/terminologie.tex
@@ -1,5 +1,5 @@
 \label{terminologie}
-Terminology that has been changed since the last iteration is listed below. Objects in the domain model that can't be found in the list have remain the same.
+Terminologie die gewijzigd is sinds de laatste iteratie is hieronder opgesomd. Objecten in het domeinmodel die niet gevonden kunnen worden in de lijst zijn hetzelfde gebleven.
 \begin{description}
   \item[Fire truck] A fire truck is a normal unit, except that there is a maximum size of fire it is capable of dealing with. The capacitiy of a fire truck is expressed in liters of water.
   \item[Disaster] A disaster is a group of emergencies that seem to be caused by the same event. Disasters are specified by a description and have a severity level and location derived from its emergencies.
