toch de texttt weggehaald uit het domeinmodel (hoort daar wss niet thuis veronderstel ik )
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@856 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/domeinmodel.tex
@@ -5,4 +5,4 @@
 \caption{Het nieuwe domeinmodel.}
 \label{fig:newDomainModel}
 \end{figure}
-Figuur \ref{fig:newDomainModel} toont het nieuwe domeinmodel voor dit project. Enkele belangrijke aanpassingen die gedaan werden op het originele domeinmodel worden hier beschreven. We introduceerden de \texttt{Policy}s in het domeinmodel. Alhoewel \texttt{Policy}s geen fysieke objecten zijn in de wereld, zijn ze een prominent deel van het project en spelen ze een belangrijke rol. Ten tweede introduceerden we het concept \texttt{Disaster}.
+Figuur \ref{fig:newDomainModel} toont het nieuwe domeinmodel voor dit project. Enkele belangrijke aanpassingen die gedaan werden op het originele domeinmodel worden hier beschreven. We introduceerden de policies in het domeinmodel. Alhoewel policies geen fysieke objecten zijn in de wereld, zijn ze een prominent deel van het project en spelen ze een belangrijke rol. Ten tweede introduceerden we het concept disaster.
