--- a/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/terminologie.tex
+++ b/ProjectSWOP20102011/src/verslag/Iteratie 3/Design_report/terminologie.tex
@@ -3,8 +3,8 @@ Terminologie die gewijzigd is sinds de laatste iteratie is hieronder opgesomd. O
 \begin{description}
   \item[Fire truck] Een fire truck is een normale unit, uitgezonderd dat hij ook een capaciteit heeft. Deze wordt uitgedrukt in liters.
   \item[Disaster] Een disaster is een groep van emergencies die lijken veroorzaakt te zijn door dezelfde gebeurtenis. Disasters worden gespecifieerd door een beschrijving. Ze hebben een ernstigheidsgraad en hun locatie is afgeleid van de locatie van hun emergencies.
-    \item[Ambulance] An ambulance responds to emergencies with victims. When an ambulance arrives at the location of an emergency, it picks up a victim and transports him/her to a hospital. An ambulance can carry two victims at once if needed, but can also transport a single victim. An ambulance has finished its task if the victim is delivered at the hospital. 
-  \item[Dispatcher] A person working at the dispatch center, handling emergencies or disasters by assigning units to respond to the emergency or disaster. Dispatchers are identified by their name. A dispatcher can create disasters to group emergencies caused by the same event.
+    \item[Ambulance] Een ambulance wordt ingezet bij emergencies waar er slachtoffers zijn. Wanneer een ambulance aankomt op de locatie van de emergency, neemt het een \'e\'en of twee slachtoffer op en brengt deze naar een hospital. Een ambulance kan twee slachtoffers op hetzelfde moment vervoeren als dit nodig is, maar het kan ook er ook \'e\'en vervoeren. Een ambulance heeft zijn taak be\"eindigd als hij het slachtoffer heeft afgezet bij het hospital.
+      \item[Dispatcher] A person working at the dispatch center, handling emergencies or disasters by assigning units to respond to the emergency or disaster. Dispatchers are identified by their name. A dispatcher can create disasters to group emergencies caused by the same event.
   \item[Unit] Een unit is een ambulance, police car of een fire truck. Deze hebben allemaal een naam, thuislocatie en huidige locatie. Een unit kan werken aan een emergency of een disaster. De dispatcher is verantwoordelijk om de unit naar de emergency of disaster te sturen. Wanneer dit gebeurt rijdt de unit naar de emergency of disaster en vuurt daar zijn taak uit. Een unit kan maar \'e\'en job tegelijk hebben. De unit commander is verantwoordelijk voor het melden aan het systeem wanneer een unit zijn job voltooid heeft. Daarna kan de unit werken aan een andere job. Wanneer de unit werkloos is keert hij terug naar zijn thuislocatie.
   \item[Policy]  Een policy is een standaar manier om een emergency af te handelen. De policy die voorgesteld wordt door het systeem kan geaccepteerd of geweigerd worden door de dispatcher.
   \item[DefaultPolicy] Deze policy wordt gekozen wanner geen enkel andere policy werd geselecteerd. Deze policy stuurt de units die het fysisch dichtst bij de emergency naar de desbetreffende emergency.
